Fix spacing in CRII website.

--- a/projects/dependencies/dep.css
+++ b/projects/dependencies/dep.css
@@ -23,7 +23,7 @@
   position: fixed;
   margin-top: 0px;
   top: 0px;
-  left: 825px;
+  left: 865px;
   width: 175px;
   font-family: Geneva, Helvetica, Arial, sans-serif;
   font-size: 80%;
